--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "react-debounce-input": "^3.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-infinite-scroller": "^1.2.6",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.0.7",
+    "use-interval": "^1.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
